# serializer version: 1
# name: test_update[101n_101n_arrival_1-after-1-minute]
  '3.0'
# ---
# name: test_update[101n_101n_arrival_1-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '101N (101N) Arrival 1',
    'headsign': '',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'latitude': 45.0,
    'location_source': <LocationSource.VEHICLE_POSITION_MESSAGE: 'vehicle_position_message'>,
    'longitude': -75.0,
    'route_color': '',
    'route_id': 'A',
    'route_text_color': '',
    'route_type': '',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'A1',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[101n_101n_arrival_2-after-1-minute]
  '5.0'
# ---
# name: test_update[101n_101n_arrival_2-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '101N (101N) Arrival 2',
    'headsign': '',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'B',
    'route_text_color': '',
    'route_type': '',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'B1',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[101n_101n_arrival_3-after-1-minute]
  '7.0'
# ---
# name: test_update[101n_101n_arrival_3-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '101N (101N) Arrival 3',
    'headsign': 'Downtown',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'route_color': 'FFFFFF',
    'route_id': '123',
    'route_text_color': '888888',
    'route_type': 'Subway',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': '123-test',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[101n_101n_arrival_4-after-1-minute]
  'unknown'
# ---
# name: test_update[101n_101n_arrival_4-attributes-after-1-minute]
  dict({
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '101N (101N) Arrival 4',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[102s_102s_arrival_1-after-1-minute]
  '8.0'
# ---
# name: test_update[102s_102s_arrival_1-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '102S (102S) Arrival 1',
    'headsign': '',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'X',
    'route_text_color': '',
    'route_type': '',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'X1',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[102s_102s_arrival_2-after-1-minute]
  '12.0'
# ---
# name: test_update[102s_102s_arrival_2-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '102S (102S) Arrival 2',
    'headsign': '',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'Y',
    'route_text_color': '',
    'route_type': '',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'Y1',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[102s_102s_arrival_3-after-1-minute]
  '16.0'
# ---
# name: test_update[102s_102s_arrival_3-attributes-after-1-minute]
  dict({
    'destination': 'Stop ID: None',
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '102S (102S) Arrival 3',
    'headsign': '',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    'route_color': '',
    'route_id': 'Z',
    'route_text_color': '',
    'route_type': '',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'trip_id': 'Z1',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_update[102s_102s_arrival_4-after-1-minute]
  'unknown'
# ---
# name: test_update[102s_102s_arrival_4-attributes-after-1-minute]
  dict({
    <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '102S (102S) Arrival 4',
    <EntityStateAttribute.ICON: 'icon'>: 'mdi:bus-clock',
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
  })
# ---
